# gitlab-deployer

./: .gitignore  LICENSE  README.md  pip-selfcheck.json  pyproject.toml  setup.py
deployer/: deploy.sh  deployer.py  download.py  main.py  multi.py
gitlab_deployer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
